Update to 2.0.1